# phenomenological-rendezvous

./: CODE.md  Cargo.toml  README.md
examples/: demo_offline_matching.rs  demo_simulation.rs  measured_example.jsonl
src/: cli.rs  lib.rs  main.rs  matching.rs  pattern.rs  sim.rs  srt.rs
tests/: matching_tests.rs  srt_encoding_tests.rs
